--- a/crowdin.yml
+++ b/crowdin.yml
@@ -3,6 +3,8 @@ files:
   - source: /docs/**/*.*
     ignore:
       - '*.sh'
+      - '*.js'
+      - '*.css'
     translation: /translations/%two_letters_code%/%original_path%/%original_file_name%
   - source: /mkdocs.yml
     translation: /translations/%two_letters_code%/%original_path%/%original_file_name%
