--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python: 3.6
 sudo: false
 
 install:
-  - pip install mkdocs==1.0.4
+  - pip install -r requirements.txt
   - pip install git+https://github.com/linkchecker/linkchecker.git
 
 
