mkdocs.yml: Add IE Thermoelectric Generator

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -495,6 +495,7 @@ pages:
         - Mixer: 'Mods/Immersive_Engineering/CraftTweaker_Support/Mixer.md'
         - Refinery: 'Mods/Immersive_Engineering/CraftTweaker_Support/Refinery.md'
         - Squeezer: 'Mods/Immersive_Engineering/CraftTweaker_Support/Squeezer.md'
+        - Thermoelectric: 'Mods/Immersive_Engineering/CraftTweaker_Support/Thermoelectric.md'
     - Immersive Petroleum:
       - Immersive Petroleum: 'Mods/Immersive_Petroleum/Immersive_Petroleum.md'
       - CraftTweaker Support:
