Fixed Travis, pt. 4
Can I just use both python versions?

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -132,7 +132,7 @@ nav:
         - PlayerLoggedInEvent: 'Vanilla/Events/Events/PlayerLoggedIn.md'
         - PlayerLoggedOutEvent: 'Vanilla/Events/Events/PlayerLoggedOut.md'
         - PlayerOpenContainerEvent: 'Vanilla/Events/Events/PlayerOpenContainer.md'
-        - PlayerPickupEntityEvent: 'Vanilla\Events\Events\PlayerPickupEntity.md'
+        - PlayerPickupEntityEvent: 'Vanilla/Events/Events/PlayerPickupEntity.md'
         - PlayerPickupItemEvent: 'Vanilla/Events/Events/PlayerPickupItem.md'
         - PlayerPickupXpEvent: 'Vanilla/Events/Events/PlayerPickupXp.md'
         - PlayerRespawnEvent: 'Vanilla/Events/Events/PlayerRespawn.md'
@@ -268,13 +268,13 @@ nav:
         - Minecraft:
           - Armor-Value Locking: 'Mods/CompatSkills/Supports/Minecraft/Armor_Point_Locking.md'
           - Attack-Damage Locking: 'Mods/CompatSkills/Supports/Minecraft/Attack_Damage_Locking.md'
-          - Block-Harvestlevel Locking: 'Mods\CompatSkills\Supports\Minecraft\Block_Harvest-Level_Locking.md'
+          - Block-Harvestlevel Locking: 'Mods/CompatSkills/Supports/Minecraft/Block_Harvest-Level_Locking.md'
           - Dimension Locking: 'Mods/CompatSkills/Supports/Minecraft/Dimension_Locking.md'
           - Entity Damage Locking: 'Mods/CompatSkills/Supports/Minecraft/Entity_Damage_Locking.md'
-          - Food Locking: 'Mods\CompatSkills\Supports\Minecraft\Food_Locking.md'
+          - Food Locking: 'Mods/CompatSkills/Supports/Minecraft/Food_Locking.md'
           - Mounting Locking: 'Mods/CompatSkills/Supports/Minecraft/Mount_Locking.md'
-          - Ore Dictionary Locking: 'Mods\CompatSkills\Supports\Minecraft\Ore_Dictionary_Locking.md'
-          - Tool Harvestlevel Locking: 'Mods\CompatSkills\Supports\Minecraft\Tool_Harvest-Level_Locking.md'
+          - Ore Dictionary Locking: 'Mods/CompatSkills/Supports/Minecraft/Ore_Dictionary_Locking.md'
+          - Tool Harvestlevel Locking: 'Mods/CompatSkills/Supports/Minecraft/Tool_Harvest-Level_Locking.md'
           - Tame Locking: 'Mods/CompatSkills/Supports/Minecraft/Tame_Locking.md'
           - Tile-Entity Locking: 'Mods/CompatSkills/Supports/Minecraft/TileEntity_Locking.md'
         - ProjectE: 'Mods/CompatSkills/Supports/ProjectE/EMC-Locks.md'
