--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: python
 python: 
   - "2.7"
   - "3.6"
+  - "pypy3"
+
+virtualenv:
+  system_site_packages: true
+
 sudo: false
 
 install:
