--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,20 @@
 language: python
 python: 
-  - "2.7"
+#  - "2.7"
   - "3.6"
   - "pypy3"
-
-virtualenv:
-  system_site_packages: true
 
 sudo: false
 
 install:
   - pip install -r requirements.txt
-  - pip install git+https://github.com/linkchecker/linkchecker.git
+#  - pip install git+https://github.com/linkchecker/linkchecker.git
 
 
 script:
   - mkdocs build --clean --site-dir site
-  - linkchecker site/index.html --ignore-url="search\.html"
+#  - linkchecker site/index.html --ignore-url="search\.html"
+  - pylinkvalidate.py -P http://www.example.com/
+
 
 cache: pip
