--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: python
 python: 
-#  - "2.7"
   - "3.6"
   - "pypy3"
 
@@ -8,13 +7,11 @@ sudo: false
 
 install:
   - pip install -r requirements.txt
-#  - pip install git+https://github.com/linkchecker/linkchecker.git
 
 
 script:
   - mkdocs build --clean --site-dir site
-#  - linkchecker site/index.html --ignore-url="search\.html"
-  - pylinkvalidate.py -P http://www.example.com/
+  - pylinkvalidate.py --progress --url-file-path site/index.html
 
 
 cache: pip
