--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
 
 script:
   - mkdocs build --clean --site-dir site
-  - pylinkvalidate.py --progress --url-file-path site/index.html
+  - pylinkvalidate.py --progress site/index.html
 
 
 cache: pip
