--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
 
 script:
   - mkdocs build --clean --site-dir site
-  - linkchecker site/index.html --ignore-url="search\.html
+  - linkchecker site/index.html --ignore-url="search\.html"
 
 
 cache: pip
