--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,14 @@
 language: python
-python: 
-  - "3.6"
-
+python: 2.7
 sudo: false
 
 install:
-  - pip install -r requirements.txt
+  - pip install mkdocs==0.16.3
+  - pip install git+https://github.com/linkchecker/linkchecker.git
 
 
 script:
   - mkdocs build --clean --site-dir site
-  - linkchecker file://$TRAVIS_BUILD_DIR/site/index.html --ignore-url="search\.html"
-
+  - linkchecker site/index.html --ignore-url="search\.html"
 
 cache: pip
