Revert "Fix upgrading mkdocs breaking the build"
This reverts commit 397ec229c2a879f9390dbc1f930ee04d09548932.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -821,7 +821,7 @@ markdown_extensions:
       anchorlink: True
 
 theme:
-  name: null
+  name: 'mkdocs'
   custom_dir: 'mkdocs_windmill'
 
 extra_css:
