--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -116,6 +116,9 @@ pages:
       - World:
         - MCBiome: 'vanilla/api/world/MCBiome.md'
         - MCBiomeSpawnEntry: 'vanilla/api/world/MCBiomeSpawnEntry.md'
+  - Mods:
+    - JEITweaker:
+      - JEITweaker: 'mods/JEITweaker/JEITweaker.md'
 
 # Do not edit in PRs below here
 site_name: CraftTweaker Documentation
