--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,15 +1,21 @@
 # If you add a page, you must add it to the index here
 pages:
-  - Home: 'index.md'
+  - Home: 'home.md'
   - Getting Started With Scripts: 'getting_started.md'
   - Commands: "commands.md"
-  - Examples: "examples.md"
   - Recipes:
-    - Recipe Managers: "recipes/recipe_managers.md"
-    - Crafting Table: "recipes/crafting_table.md"
+    - Removing Recipes: "recipes/removing_recipes.md"
+    - Adding Recipes:
+      - Blast Furnace: "recipes/blast_furnace.md"
+      - Campfire: "recipes/campfire.md"
+      - Crafting Table: "recipes/crafting_table.md"
+      - Furnace: "recipes/furnace.md"
+      - Smoker: "recipes/smoker.md"
+      - Stone Cutter: "recipes/stonecutter.md"
   - Vanilla:
     - How to:
       - How to: 'vanilla/how_to/how_to.md'
+    - Stations: "vanilla/stations.md"
     - Api:
       - Block:
         - Material:
