Update to the new docs theme

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: python
-python: 2.7
+python: 3.8
 sudo: false
 
 install:
-  - pip install mkdocs==0.16.3
+  - pip install mkdocs==1.1
+  - pip install git+https://github.com/CraftTweaker/mkdocs-use-site-url-plugin.git
+  - pip install mkdocs-minify-plugin==0.2.3
   - pip install git+https://github.com/linkchecker/linkchecker.git
 
 
