--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -451,6 +451,9 @@ nav:
         - ZenStager: 'Mods/GameStages/ZenStages/ZenStager.md'
         - Stage: 'Mods/GameStages/ZenStages/Stage.md'
         - Custom Type: 'Mods/GameStages/ZenStages/CustomType.md'
+    - Garden Stuff:
+      - Introduction: 'Mods/Garden_Stuff/Garden_Stuff.md'
+      - Composter: 'Mods/Garden_Stuff/Composter.md'
     - GregTech Community Edition:
       - GregTech Community Edition: 'Mods/GregTechCE/GregTechCE.md'
       - Machines: 'Mods/GregTechCE/Machines.md'
