--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -152,7 +152,7 @@ extra:
   discord_link: "https://discord.blamejared.com"
 
 plugins:
-  - search
+  - fast-search-updated
   - minify:
       minify_html: true
       htmlmin_opts:
