--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -94,15 +94,25 @@ pages:
           #Event superinterfaces/Shared stuff
         - IBlockEvent: 'Vanilla/Events/Events/IBlockEvent.md'
         - IEventCancelable: 'Vanilla/Events/Events/IEventCancelable.md'
+        - IEventHasResult: 'Vanilla/Events/Events/IEventHasResult.md'          
         - IEventPositionable: 'Vanilla/Events/Events/IEventPositionable.md'
+        - IMinecartEvent: 'Vanilla/Events/Events/IMinecartEvent.md'          
         - IProcessableEvent: 'Vanilla/Events/Events/IProcessableEvent.md'
         - IEntityEvent: 'Vanilla/Events/Events/IEntityEvent.md'
+        - IExplosionEvent: 'Vanilla/Events/Events/IExplosionEvent.md'
         - ILivingEvent: 'Vanilla/Events/Events/ILivingEvent.md'
         - IPlayerEvent: 'Vanilla/Events/Events/IPlayerEvent.md'
           #Actual Events below here
+        - AnimalTameEvent: 'Vanilla/Events/Events/AnimalTame.md'                      
         - BlockBreakEvent: 'Vanilla/Events/Events/BlockBreak.md'
+        - BlockFarmlandTrampleEvent: 'Vanilla/Events/Events/BlockFarmlandTrample.md'
         - BlockHarvestDropsEvent: 'Vanilla/Events/Events/BlockHarvestDrops.md'
+        - BlockPlaceEvent: 'Vanilla/Events/Events/BlockPlace.md'
         - CommandEvent: 'Vanilla/Events/Events/CommandEvent.md'
+        - CriticalHitEvent: 'Vanilla/Events/Events/CriticalHit.md'
+        - CropGrowPostEvent: 'Vanilla/Events/Events/CropGrowPost.md'
+        - CropGrowPreEvent: 'Vanilla/Events/Events/CropGrowPre.md'
+        - EnchantmentLevelSetEvent: 'Vanilla/Events/Events/EnchantmentLevelSet.md'
         - EnderTeleportEvent: 'Vanilla/Events/Events/EnderTeleport.md'
         - EntityLivingAttackedEvent: 'Vanilla/Events/Events/EntityLivingAttacked.md'
         - EntityLivingDeathDropsEvent: 'Vanilla/Events/Events/EntityLivingDeathDrops.md'
@@ -111,10 +121,22 @@ pages:
         - EntityLivingHurtEvent: 'Vanilla/Events/Events/EntityLivingHurt.md'
         - EntityLivingJumpEvent: 'Vanilla/Events/Events/EntityLivingJump.md'
         - EntityLivingSpawnEvent: 'Vanilla/Events/Events/EntityLivingSpawn.md'
+        - EntityMountEvent: 'Vanilla/Events/Events/EntityMount.md'
         - EntityStruckByLightningEvent: 'Vanilla/Events/Events/EntityStruckByLightning.md'
+        - EntityTravelToDimensionEvent: 'Vanilla/Events/Events/EntityTravelToDimension.md'
+        - ExplosionDetonateEvent: 'Vanilla/Events/Events/ExplosionDetonate.md'
+        - ExplosionStartEvent: 'Vanilla/Events/Events/ExplosionStart.md'
         - ItemExpireEvent: 'Vanilla/Events/Events/ItemExpire.md'
+        - ItemFishedEvent: 'Vanilla/Events/Events/ItemFished.md'
         - ItemTossEvent: 'Vanilla/Events/Events/ItemToss.md'
+        - LivingDestroyBlockEvent: 'Vanilla/Events/Events/LivingDestroyBlock.md'
         - LivingEntityUseItemEvent: 'Vanilla/Events/Events/LivingEntityUseItem.md'
+        - LivingExperienceDropEvent: 'Vanilla/Events/Events/LivingExperienceDrop.md'
+        - LivingKnockBackEvent: 'Vanilla/Events/Events/LivingKnockBack.md'
+        - LootingLevelEvent: 'Vanilla/Events/Events/LootingLevel.md'
+        - MinecartCollisionEvent: 'Vanilla/Events/Events/MinecartCollision.md'
+        - MinecartInteractEvent: 'Vanilla/Events/Events/MinecartInteract.md'
+        - MobGriefingEvent: 'Vanilla/Events/Events/MobGriefing.md'
         - PlayerAdvancementEvent: 'Vanilla/Events/Events/PlayerAdvancement.md'
         - PlayerAnvilRepairEvent: 'Vanilla/Events/Events/PlayerAnvilRepair.md'
         - PlayerAttackEntityEvent: 'Vanilla/Events/Events/PlayerAttackEntity.md'
@@ -122,6 +144,7 @@ pages:
         - PlayerBreakSpeedEvent: 'Vanilla/Events/Events/PlayerBreakSpeed.md'
         - PlayerBrewedPotionEvent: 'Vanilla/Events/Events/PlayerBrewedPotion.md'
         - PlayerChangedDimensionEvent: 'Vanilla/Events/Events/PlayerChangedDimension.md'
+        - PlayerCloseContainerEvent: 'Vanilla/Events/Events/PlayerCloseContainer.md'
         - PlayerCraftedEvent: 'Vanilla/Events/Events/PlayerCrafted.md'
         - PlayerDeathDropsEvent: 'Vanilla/Events/Events/PlayerDeathDrops.md'
         - PlayerDestroyItemEvent: 'Vanilla/Events/Events/PlayerDestroyItem.md'
@@ -129,17 +152,28 @@ pages:
         - PlayerInteractBlockEvent: 'Vanilla/Events/Events/PlayerInteractBlock.md'
         - PlayerInteractEntityEvent: 'Vanilla/Events/Events/PlayerInteractEntity.md'
         - PlayerInteractEvent: 'Vanilla/Events/Events/PlayerInteract.md'
+        - PlayerItemPickupEvent: 'Vanilla/Events/Events/PlayerItemPickup.md'
+        - PlayerLeftClickBlockEvent: 'Vanilla/Events/Events/PlayerLeftClickBlock.md'
         - PlayerLoggedInEvent: 'Vanilla/Events/Events/PlayerLoggedIn.md'
         - PlayerLoggedOutEvent: 'Vanilla/Events/Events/PlayerLoggedOut.md'
         - PlayerOpenContainerEvent: 'Vanilla/Events/Events/PlayerOpenContainer.md'
         - PlayerPickupItemEvent: 'Vanilla/Events/Events/PlayerPickupItem.md'
         - PlayerPickupXpEvent: 'Vanilla/Events/Events/PlayerPickupXp.md'
         - PlayerRespawnEvent: 'Vanilla/Events/Events/PlayerRespawn.md'
+        - PlayerRightClickItemEvent: 'Vanilla/Events/Events/PlayerRightClickItem.md'
         - PlayerSetSpawnEvent: 'Vanilla/Events/Events/PlayerSetSpawn.md'
         - PlayerSleepInBedEvent: 'Vanilla/Events/Events/PlayerSleepInBed.md'
         - PlayerSmeltedEvent: 'Vanilla/Events/Events/PlayerSmelted.md'
         - PlayerTickEvent: 'Vanilla/Events/Events/PlayerTick.md'
         - PlayerUseHoeEvent: 'Vanilla/Events/Events/PlayerUseHoe.md'
+        - PlayerVisibilityEvent: 'Vanilla/Events/Events/PlayerVisibility.md'
+        - PotionBrewPostEvent: 'Vanilla/Events/Events/PotionBrewPost.md'
+        - PotionBrewPreEvent: 'Vanilla/Events/Events/PotionBrewPre.md'
+        - ProjectileImpactArrowEvent: 'Vanilla/Events/Events/ProjectileImpactArrow.md'
+        - ProjectileImpactFireballEvent: 'Vanilla/Events/Events/ProjectileImpactFireball.md'
+        - ProjectileImpactThrowableEvent: 'Vanilla/Events/Events/ProjectileImpactThrowable.md'
+        - SleepingLocationCheckEvent: 'Vanilla/Events/Events/SleepingLocationCheck.md'
+        - SleepingTimeCheckEvent: 'Vanilla/Events/Events/SleepingTimeCheck.md'                 
     - Game:
       - IClient: 'Vanilla/Game/IClient.md'
       - IGame: 'Vanilla/Game/IGame.md'
