Add Initial Inventory docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -119,6 +119,8 @@ nav:
   - Mods:
       - JEITweaker:
           - JEITweaker: 'mods/JEITweaker/JEITweaker.md'
+      - InitialInventory:
+          - InitialInventory: 'mods/InitialInventory/InitialInventory.md'
 
 # Do not edit in PRs below here
 site_name: CraftTweaker Documentation
