--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -261,6 +261,24 @@ nav:
         - Starlight Infusion: 'Mods/Astral_Sorcery/Infusion.md'
         - Starlight Transmutation: 'Mods/Astral_Sorcery/Transmutation.md'
         - Util: 'Mods/Astral_Sorcery/Util.md'
+    - Calculator:
+      - Algorithm Seperator: 'Mods/Calculator/Algorithm_Seperator.md'
+      - Atomic Calculator: 'Mods/Calculator/Atomic_Calculator.md'
+      - Basic Calculator: 'Mods/Calculator/Basic_Calculator.md'
+      - Conductor Mast: 'Mods/Calculator/Conductor_Mast.md'
+      - Extraction Chamber: 'Mods/Calculator/Extraction_Chamber.md'
+      - Fabrication Chamber: 'Mods/Calculator/Fabrication_Chamber.md'
+      - Flawless Calculator: 'Mods/Calculator/Flawless_Calculator.md'
+      - Glowstone Extractor: 'Mods/Calculator/Glowstone_Extractor.md'
+      - Health Processor: 'Mods/Calculator/Health_Processor.md'
+      - Precision Chamber: 'Mods/Calculator/Precision_Chamber.md'
+      - Processing Chamber: 'Mods/Calculator/Processing_Chamber.md'
+      - Reassembly Chamber: 'Mods/Calculator/Reassembly_Chamber.md'
+      - Redstone Extractor: 'Mods/Calculator/Redstone_Extractor.md'
+      - Restoration Chamber: 'Mods/Calculator/Restoration_Chamber.md'
+      - Scientific Calculator: 'Mods/Calculator/Scientific_Calculator.md'
+      - Starch Extractor: 'Mods/Calculator/Starch_Extractor.md'
+      - Stone Seperator: 'Mods/Calculator/Stone_Seperator.md'
     - CompatSkills:
       - CompatSkills: 'Mods/CompatSkills/CompatSkills.md'
       - Requirements:
@@ -507,7 +525,7 @@ nav:
       - Scrap Box: 'Mods/IC2Tweaker/Scrap_Box.md'
       - Semi-Fluid Generator: 'Mods/IC2Tweaker/Semi-Fluid_Generator.md'
       - Thermal Centrifuge: 'Mods/IC2Tweaker/ThermalCentrifuge.md'
-    - IC2ClassicTweaker:
+    - IC2 Classic Tweaker:
       - Adv Crafting: 'Mods/IC2ClassicTweaker/AdvCrafting.md'
       - Canning Machine: 'Mods/IC2ClassicTweaker/CanningMachine.md'
       - Electrolyzer: 'Mods/IC2ClassicTweaker/Electrolyzer.md'
